removed language specific capability map templates and added the text to vivo_all.properties, ticket vivo-1892

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -590,6 +590,27 @@ delete_selected=ausgewählte löschen
 remove_capability=Entferne Begriff
 remove_group=Entferne Gruppe
 expand=erweitern
+cap_map_search=Suchen
+cap_map_search_expand=Suchen und Erweitern
+cap_map_reset=Zurücksetzen
+cap_map_intro=Erstellen Sie eine Capability Map durch Eingabe von Suchbegriffen.
+cap_map_text_intro=Willkommen beim Capability-Mapping-Tool. Dieses Tool veranschaulicht die Beziehung zwischen verschiedenen Forschenden über Suchbegriffe.
+cap_map_text_headline1=Erste Schritte
+cap_map_text1=Geben Sie ein Forschungsfeld in das Suchfeld oben ein und klicken Sie auf 'Suchen'. Das resultierende Diagramm zeigt den Suchbegriff in orange an, in Verbindung mit der blauen Gruppe von Forschenden, die in diesem Bereich tätig sind. Geben Sie einen anderen Suchbegriff ein, um zu sehen, wie die Forscher aus beiden Suchen zusammenhängen. Fügen Sie weitere Suchbegriffe hinzu, um eine Capability Map ('Fähigkeitskarte') zu erstellen.
+cap_map_text2=Tipp: Sie können einen groben Suchbegriff durch Klicken auf &lsquo;suchen und erweitern&rsquo; in speziellere Begriffe erweitern.
+cap_map_text_headline2=Interagieren mit der Visualisierung
+cap_map_text3=Durch Anklicken eines beliebigen Knotens in der Visualisierung können zusätzliche Informationen in der Registerkarte "Info" auf der rechten Seite angezeigt werden. Für Personengruppen können die Angehörigen der Gruppe und Informationen über sie eingesehen sowie einzelne Forscher aus der Visualisierung entfernt werden. Wenn Sie einen Suchbegriff auswählen, werden alle angehängten Gruppen angezeigt. Unter jeder Gruppe werden alle Informationen für jede Person abgerufen und die Anzahl der passenden Stipendien und Publikationen für jeden Forscher innerhalb der abgebildeten Fähigkeiten angezeigt. Ein Klick auf den Namen eines Forschers führt zu den ursprünglichen Suchergebnissen.
+cap_map_text_headline3=Visuelle Hinweise
+cap_map_text4=Um die Visualisierung besser lesbar zu machen, werden Suchbegriffe und Gruppen entsprechend der Anzahl der zurückgegebenen Ergebnisse skaliert. Je nach Anzahl der verknüpften Suchbegriffe erhalten die Gruppen auch unterschiedliche Schattierungen. Je dunkler der Farbton, desto mehr Suchbegriffe sind mit einer Gruppe verbunden.
+cap_map_text_headline4=Erweiterte Funktionen
+cap_map_text_headline5=Ändern des Cutoff-Wertes
+cap_map_text5=Die Anzahl der gefundenen Forscher pro Suchbegriff ist durch den Cutoff-Wert im Suchformular begrenzt (standardmäßig 10). Eine Erhöhung dieses Grenzwertes erhöht die Wahrscheinlichkeit einer Überschneidung zwischen verschiedenen Suchbegriffen. Dies erhöht jedoch auch die Komplexität des Graphen und kann die Erkennung von Mustern erschweren.
+cap_map_search_terms=Suchbegriffe
+cap_map_info=Info
+cap_map_cur_search_terms=Aktuelle Suchbegriffe
+cap_map_text6=Dieses Fenster zeigt eine Liste der Suchbegriffe an, die sich derzeit in der Grafik befinden. Um zu beginnen, bitte nach etwas suchen.
+cap_map_text7=Dieses Fenster zeigt Informationen über einzelne Suchbegriffe und Gruppen an. Klicken Sie auf eine Gruppe, um Informationen über sie anzuzeigen.
+
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
