--- a/en_US/webapp/src/main/webapp/i18n/vivo_all_en_US.properties
+++ b/en_US/webapp/src/main/webapp/i18n/vivo_all_en_US.properties
@@ -590,6 +590,27 @@ delete_selected=Delete selected
 remove_capability=Remove capability
 remove_group=Remove group
 expand=Expand
+cap_map_search=Search
+cap_map_search_expand=Search and Expand
+cap_map_reset=Reset
+cap_map_intro=Build a &lsquo;first pass&rsquo; capability map by typing in a<!-- set of--> search term<!--s--> that could be said to represent a broad research capability.
+cap_map_text_intro=Welcome to the Capability Mapping tool. This tool visualises how researchers relate to other researchers via search terms.
+cap_map_text_headline1=Getting Started
+cap_map_text1=Enter a research area into the search field above and press 'Search'. The resulting diagram displays the search term, rendered in orange, connected to the blue group of researchers that are active in that area. Enter another search term to see how researchers from both searches relate. Keep adding search terms to build a capability map.
+cap_map_text2=Tip: you can expand a broad search term into smaller concepts by clicking &lsquo;search and expand&rsquo;.
+cap_map_text_headline2=Interacting with the visualisation
+cap_map_text3=By clicking on any node in the visualisation, additional information can be viewed in the 'Info' tab on the right-hand side. For groups of people, the participants in the group and their information can be viewed, and individual researchers can be removed from the graph. Selecting a search term will display all attached groups. Under each group full information for each person is retrieved, and the number of matching grants and publications for each researcher within the mapped capabilities is shown. Clicking on a researcher's name will lead to the original search results.
+cap_map_text_headline3=Visual cues
+cap_map_text4=To make the visualisation easier to read, search terms and groups are scaled according to the number of results returned. Groups are also given different shades according to the number of connected search terms. The darker the shade, the more search terms a group is connected to.
+cap_map_text_headline4=Advanced features
+cap_map_text_headline5=Changing the cutoff value
+cap_map_text5=The amount of researchers retrieved for each search term for is limited by the cutoff value in the search form (10 by default). Increasing this cutoff will increase the likelihood of an intersection between different search terms. This will also increase the complexity of the graph, however, and may make it difficult to identify patterns.
+cap_map_search_terms=Search terms
+cap_map_info=Info
+cap_map_cur_search_terms=Current search terms
+cap_map_text6=This panel displays a list of the search terms currently on the graph. Search for something to begin.
+cap_map_text7=This panel displays information about individual search terms and groups. Click on a group to display its information.
+
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
