--- a/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -602,6 +602,27 @@ delete_selected=Borrar seleccionado
 remove_capability=Eliminar capacidad
 remove_group=Quitar el grupo
 expand=Expande
+cap_map_search=busca
+cap_map_search_expand=Busca y expande
+cap_map_reset=resetear
+cap_map_intro=Cree un 'primer pase' mapa de capacidades escribiendo un término de búsqueda que podría decirse que representa una amplia capacidad de investigación.
+cap_map_text_intro=Bienvenido a la herramienta de Mapeo de capacidades. Esta herramienta visualiza cómo los investigadores se relacionan con otros investigadores a través de términos de búsqueda.
+cap_map_text_headline1=Empezando
+cap_map_text1=Ingrese un área de investigación en el campo de búsqueda de arriba y presione 'Buscar'. El diagrama resultante muestra el término de búsqueda, renderizado en naranja, conectado al grupo azul de investigadores que están activos en esa área. Ingrese otro término de búsqueda para ver cómo se relacionan los investigadores de ambas búsquedas. Siga añadiendo términos de búsqueda para crear un mapa de capacidades.
+cap_map_text2=Sugerencia: puede expandir un término de búsqueda amplio en conceptos más pequeños haciendo clic en & lsquo; buscar y expandir & rsquo ;.
+cap_map_text_headline2=Interactuando con la visualización
+cap_map_text3=Al hacer clic en cualquier nodo en la visualización, información adicional se puede ver en el Pestaña 'Información' en el lado derecho. Para grupos de personas, los participantes en el grupo y su información puede ser vista, y los investigadores individuales pueden eliminarse del gráfico. Al seleccionar un término de búsqueda, se mostrarán todos los grupos adjuntos. Debajo de cada grupo se recupera la información completa de cada persona, y el número de subvenciones y publicaciones correspondientes para cada investigador dentro de las capacidades mapeadas se muestra. Al hacer clic en el nombre de un investigador se llevará a la búsqueda original resultados.
+cap_map_text_headline3=Señales visuales
+cap_map_text4=Para facilitar la lectura de la visualización, los términos y grupos de búsqueda se escalan de acuerdo a la cantidad de resultados devueltos. Los grupos también reciben diferentes tonos de acuerdo con la cantidad de términos de búsqueda conectados. Cuanto más oscura es la sombra, más términos de búsqueda se conectan a un grupo.
+cap_map_text_headline4=Características avanzadas
+cap_map_text_headline5=Cambiar el valor de corte
+cap_map_text5=La cantidad de investigadores recuperados para cada término de búsqueda para está limitado por el valor de corte en el formulario de búsqueda (10 por defecto). Aumentar este límite aumentará la probabilidad de una intersección entre diferentes términos de búsqueda. Esto también aumentará la complejidad del gráfico, sin embargo, y puede dificultar la identificación de patrones.
+cap_map_search_terms=Términos de búsqueda
+cap_map_info=Información
+cap_map_cur_search_terms=Términos de búsqueda actuales
+cap_map_text6=Este panel muestra una lista de los términos de búsqueda actualmente en el gráfico. Busque algo para comenzar.
+cap_map_text7=Este panel muestra información sobre el individuo términos y grupos de búsqueda. Haga clic en un grupo para mostrar su información.
+
 
 #
 #  variables de javascript en formularios personalizados ( /templates/freemarker/edit/js)
