--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -592,6 +592,27 @@ delete_selected=Retirer du graphe
 remove_capability=Retirer du graphe
 remove_group=Retirer du graphe
 expand=Étendre
+cap_map_search=Chercher
+cap_map_search_expand=Étendre
+cap_map_reset=Vider
+cap_map_intro=Pour construire une première cartographie, saisir un terme de recherche représentant un large domaine d'expertise..
+cap_map_text_intro=La cartographie d'expertises est un outil simple et efficace qui permet la recherche, l'exploration et la découverte d'experts à travers une cartographie visuelle représentant les liens entre les chercheurs et leurs domaines de recherche.
+cap_map_text_headline1=Pour commencer
+cap_map_text1=Saisir un terme de recherche et cliquer sur 'Chercher'. Le graphe résultant affiche les expertises sous forme de carrés orangés. À ces sujets sont reliés des points de couleur bleu représentant les chercheurs. Ajouter un autre terme de recherche pour voir comment les résultats de combinent. Ajouter d'autres termes au besoin.
+cap_map_text2=Conseil: pour étendre la recherche à d'autres concepts reliés cliquewr sur  &lsquo;Étendre&rsquo;.
+cap_map_text_headline2=Interagir avec la cartographie
+cap_map_text3=En cliquant sur un noeud, de l'information supplémentaire est affichée dans l'onglet 'Informations' du côté droit de la fenêtre. Dans le cas de groupes de chercheurs, les participants et leurs métadonnées sont affichées. Les personnes peuvent être retirées du graphe individuellement. La sélection d'un terme permet d'afficcher tous les groupes associés. Sous chaque groupe les données de chaque individu sont affichées. Le nombre de publications et de subventions correspondant à chaque chercheur sont également présentées. En cliquant sur le nom du chercheur on accède à sa fiche complète
+cap_map_text_headline3=Conseils de visualisation
+cap_map_text4=Pour rendre la visualisation plus facile à lire, les termes de recherche sont classés selon le nombre de résultats retournés. Les groupes reçoivent également différentes nuances de couleur en fonction du nombre de termes de recherche connectés. Plus l'ombre est foncée, plus le nombre de termes recherchés auxquels un groupe est connecté est élevé.
+cap_map_text_headline4=Fonctions avancées
+cap_map_text_headline5=Changer la limite des résultats
+cap_map_text5=Le nombre maximum de chercheurs retrouvés pour un terme donné est déterminé par la valeur 'limite' qui est fixée à 10 par défaut. Hausser cette limite augmentera le nombre possible de connexions entre différentes expertises. Toutefois, garder à l'esprit qu'une limite trop élevée peut rendre la lecture de la cartographie plus difficile.
+cap_map_search_terms=Expertises
+cap_map_info=Informations
+cap_map_cur_search_terms=Termes de recherche courants
+cap_map_text6=Cet espace présente la liste des termes de la recherche en cours dans la cartographie. Inscrire un terme de recherche pour débuter.
+cap_map_text7=Cet espace affiche de l'information relative aux termes et groupes de termes. Cliquer sur un groupe pour afficher les informations qui y sont associées.
+
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
