--- a/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
+++ b/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
@@ -600,6 +600,26 @@ delete_selected=Eliminar selecionado
 remove_capability=Remova capacidade
 remove_group=Remover grupo
 expand=Expandir
+cap_map_search=Pesquisa
+cap_map_search_expand=Pesquisa e Expansão
+cap_map_reset=Reinicialização
+cap_map_intro=Crie um 'primeiro passe' mapa de capacidade digitando um termo de pesquisa que poderia ser dito representar uma ampla capacidade de pesquisa.
+cap_map_text_intro=Bem-vindo à ferramenta Mapeamento de Capacidade. Esta ferramenta visualiza como os pesquisadores se relacionam com outros pesquisadores através de termos de pesquisa.
+cap_map_text_headline1=Começando
+cap_map_text1=Digite uma área de pesquisa no campo de pesquisa acima e pressione 'Pesquisar'. O diagrama resultante exibe o termo de pesquisa, renderizado em laranja, conectado ao grupo azul de pesquisadores que atuam nessa área. Digite outro termo de pesquisa para ver como os pesquisadores de ambas as pesquisas se relacionam. Continue adicionando termos de pesquisa para criar um mapa de capacidade.
+cap_map_text2=Dica: você pode expandir um longo termo de pesquisa em conceitos menores clicando em & lsquo; procure e expanda & rsquo ;.
+cap_map_text_headline2=Interagindo com a visualização
+cap_map_text3=Ao clicar em qualquer nó na visualização, informações adicionais podem ser visualizadas no Guia 'Informações' no lado direito. Para grupos de pessoas, os participantes do grupo e suas informações podem ser vistas, e os pesquisadores individuais podem ser removidos do gráfico. A seleção de um termo de pesquisa exibirá todos os grupos anexados. Sob cada grupo, as informações completas para cada pessoa são recuperadas, e o número de bolsas e publicações correspondentes Para cada pesquisador dentro dos recursos mapeados é mostrado. Clicar no nome de um pesquisador levará à busca original resultados.
+cap_map_text_headline3=Pistas visuais
+cap_map_text4=Para tornar a visualização mais fácil de ler, Os termos e grupos de pesquisa são dimensionados de acordo com para o número de resultados retornados. Os grupos também recebem tons diferentes de acordo com o número de termos de pesquisa conectados. Quanto mais escura a sombra, mais termos de pesquisa estão conectados a um grupo.
+cap_map_text_headline4=Características avançadas
+cap_map_text_headline5=Alterando o valor de corte
+cap_map_text5=A quantidade de pesquisadores recuperados para cada termo de pesquisa pois é limitado pelo valor de corte no formulário de pesquisa (10 por padrão). Aumentar esse ponto de corte aumentará a probabilidade de uma interseção entre diferentes termos de pesquisa. Isso também aumentará a complexidade do gráfico, no entanto, e pode dificultar a identificação de padrões.
+cap_map_search_terms=Termos de pesquisa
+cap_map_info=Info
+cap_map_cur_search_terms=Termos de pesquisa atuais
+cap_map_text6=Este painel exibe uma lista dos termos de pesquisa atualmente no gráfico. Procure por algo para começar.
+cap_map_text7=Este painel exibe informações sobre o indivíduo Pesquisar termos e grupos. Clique em um grupo para exibir suas informações.
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
