add translations for form headings (#65)
Partial resolution of: https://jira.lyrasis.org/browse/VIVO-1844

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -209,6 +209,8 @@ verify_match_capitalized = Übereinstimmung verifizieren
 # custom form templates ( /templates/freemarker/edit/forms )
 #
 manage_concepts = Konzepte verwalten
+concept_type = Konzept (Typ)
+vocabulary_source = Wortschatzquelle
 no_concepts_specified = Zur Zeit werden keine Konzepte näher beschrieben.
 return_to_profile = Zurück zur Profilseite
 external_vocabulary_services = kontrolliertes Vokabular externer Dienstleister
