--- a/en_CA/webapp/src/main/webapp/i18n/vivo_all_en_CA.properties
+++ b/en_CA/webapp/src/main/webapp/i18n/vivo_all_en_CA.properties
@@ -209,6 +209,8 @@ verify_match_capitalized = Verify this match
 # custom form templates ( /templates/freemarker/edit/forms )
 #
 manage_concepts = Manage Concepts
+concept_type = Concept (Type)
+vocabulary_source = Vocabulary Source
 no_concepts_specified = There are currently no concepts specified.
 return_to_profile = Return to Profile Page
 external_vocabulary_services = External Vocabulary Services
