--- a/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -225,6 +225,8 @@ verify_match_capitalized = Verifique esta equivalencia
 # plantillas de formulario personalizado ( /templates/freemarker/edit/forms )
 #
 manage_concepts = Administrar conceptos
+concept_type = Concepto (tipo)
+vocabulary_source = Fuente de vocabulario
 no_concepts_specified = Actualmente no hay conceptos especificados.
 return_to_profile = Volver a la página de perfil
 external_vocabulary_services = Servicios de vocabulario externos
