--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -208,6 +208,8 @@ verify_match_capitalized = Vérifier cette correspondance
 # custom form templates ( /templates/freemarker/edit/forms )
 #
 manage_concepts = Gérer les concepts
+concept_type = Concept (type)
+vocabulary_source = Source de vocabulaire
 no_concepts_specified = Aucun concept spécifié.
 return_to_profile = Revenir au profil
 external_vocabulary_services = Services de vocabulaires externes
