--- a/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
+++ b/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
@@ -221,6 +221,8 @@ verify_match_capitalized = Verificar esta combinação
 # custom form templates ( /templates/freemarker/edit/forms )
 #
 manage_concepts = Gerenciar Conceitos
+concept_type = Conceito (tipo)
+vocabulary_source = Fonte de vocabulário
 no_concepts_specified = Atualmente não há conceitos especificados.
 return_to_profile = Retornar para Página de Perfil
 external_vocabulary_services = Serviços de Vocabulário externos
