Added properties for labelling former key.png in cap map. (#70)
- fixed types, added formerly missing properties and files

Co-authored-by: Matthias Lühr <luehr@hs-mittweida.de>

Partial resolution for: https://jira.lyrasis.org/browse/VIVO-1902

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -612,7 +612,12 @@ cap_map_info=Info
 cap_map_cur_search_terms=Aktuelle Suchbegriffe
 cap_map_text6=Dieses Fenster zeigt eine Liste der Suchbegriffe an, die sich derzeit in der Grafik befinden. Um zu beginnen, bitte nach etwas suchen.
 cap_map_text7=Dieses Fenster zeigt Informationen über einzelne Suchbegriffe und Gruppen an. Klicken Sie auf eine Gruppe, um Informationen über sie anzuzeigen.
-
+cap_map_key1=Fähigkeit
+cap_map_key2=Verbindung
+cap_map_key3=Gruppe
+cap_map_key4=2 Verbindungen
+cap_map_key5=3 Verbindungen
+cap_map_key6=>=4 Verbindungen
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
