--- a/en_CA/webapp/src/main/webapp/i18n/vivo_all_en_CA.properties
+++ b/en_CA/webapp/src/main/webapp/i18n/vivo_all_en_CA.properties
@@ -612,6 +612,12 @@ cap_map_info=Info
 cap_map_cur_search_terms=Current search terms
 cap_map_text6=This panel displays a list of the search terms currently on the graph. Search for something to begin.
 cap_map_text7=This panel displays information about individual search terms and groups. Click on a group to display its information.
+cap_map_key1=capability
+cap_map_key2=link
+cap_map_key3=group
+cap_map_key4=2 links
+cap_map_key5=3 links
+cap_map_key6=>=4 links
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
