--- a/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -624,7 +624,12 @@ cap_map_info=Información
 cap_map_cur_search_terms=Términos de búsqueda actuales
 cap_map_text6=Este panel muestra una lista de los términos de búsqueda actualmente en el gráfico. Busque algo para comenzar.
 cap_map_text7=Este panel muestra información sobre el individuo términos y grupos de búsqueda. Haga clic en un grupo para mostrar su información.
-
+cap_map_key1=capacidad
+cap_map_key2=enlace
+cap_map_key3=grupo
+cap_map_key4=2 enlaces
+cap_map_key5=3 enlaces
+cap_map_key6=>= 4 enlaces
 
 #
 #  variables de javascript en formularios personalizados ( /templates/freemarker/edit/js)
