--- a/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
+++ b/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
@@ -622,6 +622,12 @@ cap_map_info=Info
 cap_map_cur_search_terms=Termos de pesquisa atuais
 cap_map_text6=Este painel exibe uma lista dos termos de pesquisa atualmente no gráfico. Procure por algo para começar.
 cap_map_text7=Este painel exibe informações sobre o indivíduo Pesquisar termos e grupos. Clique em um grupo para exibir suas informações.
+cap_map_key1=capacidade
+cap_map_key2=borda
+cap_map_key3=grupo
+cap_map_key4=2 links
+cap_map_key5=3 links
+cap_map_key6=>= 4 links
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
