- providing german translation of ORCID and DOI claimer related messages

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -849,84 +849,88 @@ role_in_presentation_capitalized=Rolle in der Präsentation
 advisee_capitalized_first_name=Vorname
 advisee_capitalized_lastname=Nachname
 
-add_orcid_id=Add an iD
+add_orcid_id=ID hinzufügen
 
-orcid_title_add = Do you want to add an ORCID iD?
-orcid_step1_add = Step 1: Adding your ORCID iD
-orcid_title_confirm = Do you want to add an ORCID iD?
-orcid_step1_confirm = Step 1: Adding your ORCID iD
+orcid_title_add = Möchten Sie eine ORCID iD hinzufügen?
+orcid_step1_add = Schritt 1: Hinzufügen Ihrer ORCID iD
+orcid_title_confirm = Möchten Sie eine ORCID iD hinzufügen?
+orcid_step1_confirm = Schritt 1: Hinzufügen Ihrer ORCID iD
 
-orcid_step1_description = <ul><li>VIVO redirects you to ORCID's web site.</li> \
-<li>You log in to your ORCID account. <ul class="inner"><li>If you don't have an account, you can create one.</li></ul></li> \
-<li>You tell ORCID that VIVO may read your ORCID record.</li> \
-<li>VIVO reads your ORCID record.</li> \
-<li>VIVO notes that your ORCID iD is confirmed.</li></ul>
+orcid_step1_description = <ul><li>VIVO leitet Sie auf die  ORCID Seite um.</li> \
+<li>Melden Sie sich mit Ihrem ORCID Account an. <ul class="inner"><li>Wenn Sie noch keinen Account besitzen, können Sie einen neuen Account erstellen.</li></ul></li> \
+<li>Bestätigen Sie ORCID, dass VIVO Ihren ORCID Eintrag lesen darf.</li> \
+<li>VIVO liest Ihren ORCID Eintrag aus.</li> \
+<li>Im VIVO wird Ihre ORCID iD jetzt als bestätigt angezeigt.</li></ul>
 
-orcid_step1_denied = <p>You denied VIVO's request to read your ORCID record.</p> \
-<p>Confirmation can't continue.</p>
+orcid_step1_denied = <p>Sie haben VIVO die Berechtigung verweigert, Ihren ORCID Eintrag auszulesen.</p> \
+<p>Die Überprüfung kann nicht fortgesetzt werden.</p>
 
-orcid_step1_failed = <p>VIVO failed to read your ORCID record.</p> \
-<p>Confirmation can't continue.</p>
+orcid_step1_failed = <p>Das Auslesen Ihres ORCID Eintrags ist fehlgeschlagen.</p> \
+<p>Die Überprüfung kann nicht fortgesetzt werden.</p>
 
-orcid_step1_confirmed = <p>Your ORCID iD is confirmed as {0}</p>
+orcid_step1_confirmed = <p>Die ORCID iD ist als {0} bestätigt.</p>
 
-orcid_step2_heading = Step 2 (recommended): Linking your ORCID record to VIVO
+orcid_step2_heading = Schritt 2 (empfohlen): Verbinden Sie Ihren ORCID Eintrag mit VIVO
 
-orcid_step2_description = <ul><li>VIVO redirects you to ORCID's web site</li> \
-<li>You tell ORCID that VIVO may add an "external ID" to your ORCID record.</li> \
-<li>VIVO adds the external ID.</li></ul>
+orcid_step2_description = <ul><li>VIVO leitet Sie auf die  ORCID Seite um.</li> \
+<li>Sie erlauben ORCID, dass VIVO eine "external ID" zu Ihrem ORCID Eintrag hinzufügt.</li> \
+<li>VIVO ergänzt Ihren nORCID Eintrag.</li></ul>
 
-orcid_step2_already_present = <p>Your ORCID record already includes a link to VIVO.</p>
+orcid_step2_already_present = <p>Ihr ORCID Eintrag enthält bereits einen Verweis auf VIVO.</p>
 
-orcid_step2_denied = <p>You denied VIVO's request to add an External ID to your ORCID record.</p> \
-<p>Linking can't continue.</p>
+orcid_step2_denied = <p>Sie haben VIVOs Anfrage eine ID zu Ihrem ORCID Eintrag hinzuzufügen abgelehnt.</p> \
+<p>Die Verknüpfung konnte nicht erstellt werden.</p>
 
-orcid_step2_failed = <p>VIVO failed to add an External ID to your ORCID record.</p> \
-<p>Linking can't continue.</p>
+orcid_step2_failed = <p>Das Hinzufügen der externen ID ist fehlgeschlagen.</p> \
+<p>Die Verknüpfung konnte nicht erstellt werden.</p>
 
-orcid_step2_added = <p>Your ORCID record is linked to VIVO</p>
+orcid_step2_added = <p>Ihr ORCID Eintrag wurde mit VIVO verknüpft.</p>
 
-orcid_button_step1 = Continue Step 1
-orcid_button_step2 = Continue Step 2
+orcid_button_step1 = Setzen Sie Schritt 1 fort
+orcid_button_step2 = Setzen Sie Schritt 2 fort
 
-orcid_step_completed = (step completed)
-orcid_view_orcid_record = View your ORCID record.
-orcid_return_to_vivo = Return to your VIVO profile page
+orcid_step_completed = (Vorgang abgeschlossen)
+orcid_view_orcid_record = Zu Ihrem ORCID Eintrag
+orcid_return_to_vivo = Zurück zu Ihrem VIVO Profil
+
 # Messages for creating and linking resources (publications)
-create_and_link_enter=Enter {0}:
-create_and_link_claim_for=Claiming works for<br />{0}
-create_and_link_confirm_works=Confirm your work(s)
-create_and_link_confirm_works_intro=Please check that these are the work(s) that you wish to claim, and indicate your relationship with them.
-create_and_link_authors=Authors
-create_and_link_authors_desc=If you are an author of a work, please select your name in the author list.<br />Retrieved metadata may be incomplete. If you can not see your name listed, select "Unlisted Author".
-create_and_link_editors=Editors
-create_and_link_editors_desc=If you edited the work, please select "Editor".
-create_and_link_not_mine_desc=If you do not wish to claim a work, select "This is not my work".
-create_and_link_already_claimed=You have already claimed this work.
-create_and_link_unlisted_author=Unlisted Author
+create_and_link_enter=Geben Sie {0}(s) ein:
+create_and_link_claim_for=Publikationen für <br />{0}<br /> importieren
+create_and_link_confirm_works=Bestätigen Sie Ihre Arbeiten:
+create_and_link_confirm_works_intro=Bitte überprüfen Sie, ob dies die Veröffentlichungen sind, die Sie importieren wollen und geben Sie Ihre Beziehung zu dieser Veröffentlichung an.
+create_and_link_authors=Autoren
+create_and_link_authors_desc=Wenn Sie ein Autor der Arbeit sind, wählen Sie bitte Ihren Namen aus der Liste aus.
+create_and_link_editors=Editoren
+create_and_link_editors_desc=Wenn Sie Herausgeber der Veröffentlichung sind, wählen Sie bitte "Editor" aus.
+create_and_link_not_mine_desc=Wenn Sie diese Arbeit nicht für sich beanspruchen wollen, wählen Sie bitte "Das ist nicht meine Veröffentlichung".
+create_and_link_pubtype_title=Publikationstyp
+create_and_link_pubtype_desc=Im Fall einer erstmalig zu importierenden Publikation wählen Sie bitte einen passenden Publikationstyp aus der Liste.
+create_and_link_already_claimed=Sie haben diese Veröffentlichung bereits für sich beansprucht.
+create_and_link_unlisted_author=Nicht aufgelisteter Autor.
 create_and_link_editor=Editor
-create_and_link_not_mine=This is not my work
-create_and_link_remaining=There are {0} ids remaining
-create_and_link_thank_you=Thank you
-create_and_link_finished=There are no more works left to claim.<br />You may enter more IDs below, or view your profile.
-create_and_link_go_profile=Go to profile
-create_and_link_enter_dois_intro=You may enter one or more DOIs to match, and can be entered either as an ID or URL:<br /><br />e.g.
-create_and_link_enter_dois_supported=Currently, DOIs issued by Crossref, DataCite and mEDRA are supported.<br />Each DOI should be separated by a comma or new line.
-create_and_link_enter_pmid_intro=You may enter one or more PubMed IDs to match. Each ID should be separated by a comma or new line.
-create_and_link_enter_pmid_supported=Note that metadata will be retrieved from Crossref, if the PubMed ID can be resolved to a DOI.
-create_and_link_unknown_profile=Unknown Profile
-create_and_link_unknown_resource=Unknown Resource Type
-create_and_link_unauthorized_for_profile=You do not have permissions to claim for this user
-create_and_link_submit_ids=Submit IDs
-create_and_link_submit_confirm=Confirm
-create_and_link_error=Unable to retrieve citation details
-create_and_link_type_article=Article
-create_and_link_type_article_journal=Journal Article
-create_and_link_type_book=Book
-create_and_link_type_chapter=Chapter
-create_and_link_type_dataset=Dataset
-create_and_link_type_figure=Image
-create_and_link_type_graphic=Image
+create_and_link_not_mine_title=Keine Beziehung zur Veröffentlichung
+create_and_link_not_mine=Das ist nicht meine Veröffentlichung.
+create_and_link_remaining=Es sind noch {0} IDs übrig.
+create_and_link_thank_you=Vielen Dank.
+create_and_link_finished=Es stehen keine weiteren Veröffentlichungen zum Importieren zur Verfügung.<br />Sie können weitere IDs eingeben oder zu Ihrer Profilseite wechseln.
+create_and_link_go_profile=Zur Profilseite gehen.
+create_and_link_enter_dois_intro=Sie können mehrere DOIs entweder als DOI oder als URL eingeben:<br /><br />z. B.
+create_and_link_enter_dois_supported=Zur Zeit werden DOIs unterstützt, die von Crossref, DataCite und mEDRA vergeben wurden.<br />Jeder DOI sollte durch Komma oder Zeilenumbruch getrennt werden.
+create_and_link_enter_pmid_intro=Sie können eine oder mehrere PubMed IDs eingeben. Jede PubMed ID sollte durch Komma oder Zeilenumbruch getrennt werden.
+create_and_link_enter_pmid_supported=Bitte beachten Sie, dass von Crossref übertragenen Metadaten benutzt werden wenn zur PubMed ID kein passender DOI gefunden wird.
+create_and_link_unknown_profile=Unbekanntes Profil
+create_and_link_unknown_resource=Unbekannter Resource Typ
+create_and_link_unauthorized_for_profile=Sie haben keine Berechtigung, für diese Benutzer Veröffentlichungen zu importieren.
+create_and_link_submit_ids=Abschicken
+create_and_link_submit_confirm=Bestätigen
+create_and_link_error=Es konnten keine näheren Angaben zur Publikation ermittelt werden.
+create_and_link_type_article=Artikel
+create_and_link_type_article_journal=Journal Artikel
+create_and_link_type_book=Buch
+create_and_link_type_chapter=Kapitel
+create_and_link_type_dataset=Datensatz
+create_and_link_type_figure=Bild
+create_and_link_type_graphic=Bild
 create_and_link_type_legal_case=Legal Case
 create_and_link_type_legislation=Legislation
 create_and_link_type_manuscript=Manuscript
@@ -941,6 +945,6 @@ create_and_link_type_review=Review
 create_and_link_type_speech=Speech
 create_and_link_type_thesis=Thesis
 create_and_link_type_webpage=Webpage
-claim_publications_by=Claim publications by
+claim_publications_by=Importieren Sie Veröffentlichungen mittels
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=PubMed ID
