Modified addRoleToPersonTwoStage_fr_CA.ftl and .properties files to accomodate French grammar

--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -241,7 +241,7 @@ year_hint_format = AAAA
 
 collection_series_editor_role = Rôle d'éditeur(-trice) de collection
 editor_role_in = rôle d'éditeur(-trice) dans
-collection_or_series = la collection ou la série
+collection_or_series = collection ou série
 
 edit_wbpage_of = Éditer la page web de
 add_webpage_for = Ajouter la page web de
