--- a/fr_CA/webapp/src/main/webapp/themes/tenderfoot/i18n/all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/themes/tenderfoot/i18n/all_fr_CA.properties
@@ -52,7 +52,7 @@ grant_date = date de la subvention
 loading_data = chargement des données
 to = à
 collection_capitalized = Collection
-collection_or_series = la collection ou la série
+collection_or_series = collection ou série
 
 create_entry = Créer un enregistrement
 first_grant = Première subvention
