--- a/fr_CA/webapp/src/main/webapp/themes/wilma/i18n/all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/themes/wilma/i18n/all_fr_CA.properties
@@ -25,7 +25,7 @@ identity_myaccount = Mon compte
 identity_user = utilisateur(-trice)
 
 collection_capitalized = Collection
-collection_or_series = la collection ou la série
+collection_or_series = collection ou série
 place_of_grant = Lieu de la subvention
 email_address = Courriel
 
