[VIVO-1798] - Internationalize first and last name validation (#84)
* i18n strings for FirstAndLastNameValidator.java

Partial resolution to: https://jira.lyrasis.org/browse/VIVO-1798

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -946,3 +946,8 @@ create_and_link_type_webpage=Webpage
 claim_publications_by=Importieren Sie Veröffentlichungen mittels
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=PubMed ID
+
+# FirstAndLastNameValidator.java
+first_name_empty_msg = Sie müssen einen Wert in das Feld Vorname eingeben.
+last_name_empty_msg = Sie müssen einen Wert in das Feld Nachname eingeben.
+malformed_last_name_msg = Das Feld Nachname darf kein Komma enthalten. Bitte geben Sie den Vornamen in das Feld Vorname ein.
