--- a/en_US/webapp/src/main/webapp/i18n/vivo_all_en_US.properties
+++ b/en_US/webapp/src/main/webapp/i18n/vivo_all_en_US.properties
@@ -942,3 +942,9 @@ create_and_link_type_webpage=Webpage
 claim_publications_by=Claim publications by
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=PubMed ID
+
+# FirstAndLastNameValidator.java
+first_name_empty_msg = You must enter a value in the First Name field.
+last_name_empty_msg = You must enter a value in the Last Name field.
+malformed_last_name_msg = The last name field may not contain a comma. Please enter first name in First Name field.
+
