--- a/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -945,3 +945,9 @@ create_and_link_type_webpage=Webpage
 claim_publications_by=Claim publications by
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=PubMed ID
+
+# FirstAndLastNameValidator.java
+first_name_empty_msg = Debe ingresar un valor en el campo Nombre.
+last_name_empty_msg = Debe ingresar un valor en el campo Apellido.
+malformed_last_name_msg = El campo de apellido no puede contener una coma. Ingrese el nombre en el campo Nombre.
+
