--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -944,3 +944,9 @@ create_and_link_type_webpage=Page web
 claim_publications_by=Publications revendiquées par
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=Identifiant PubMed
+
+# FirstAndLastNameValidator.java
+first_name_empty_msg = SVP, renseigner le champ Prénom du poste.
+last_name_empty_msg = SVP, renseigner le champ Nom de famille du poste.
+malformed_last_name_msg = Le champ Nom de famille ne peut contenir une virgule. Veuillez saisir le prénom dans le champ Prénom.
+
