--- a/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
+++ b/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
@@ -944,3 +944,9 @@ create_and_link_type_webpage=Webpage
 claim_publications_by=Claim publications by
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=PubMed ID
+
+# FirstAndLastNameValidator.java
+first_name_empty_msg = Você deve inserir um valor no campo Nome.
+last_name_empty_msg = Você deve inserir um valor no campo Sobrenome.
+malformed_last_name_msg = O campo de sobrenome não pode conter vírgulas. Por favor, insira o primeiro nome no campo Nome.
+
